test/cli/test-fail/invalid-ns-deprecated/resources.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kyverno-system-tst
  labels:
    name: kyverno-system-tst
    schiff.telekom.de/owner: schiff
    platform.das-schiff.telekom.de/owner: das-schiff
