test/cli/test-fail/invalid-ns-deprecated/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: kyverno-test.yaml
policies:
- policy.yaml
resources:
- resources.yaml
results:
- kind: Namespace
  policy: restrict-labels
  resources:
  - kyverno-system-tst
  result: fail
  rule: restrict-labels
